--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-timer-hook": "^3.0.5",
     "recoil": "^0.7.7",
+    "swr": "^2.1.5",
     "tailwindest": "^1.2.1",
     "typescript": "4.9.5",
     "uuidv4": "^6.2.13"
